cmake_minimum_required(VERSION 3.16)
project(POCompiler CXX)
find_package(benchmark REQUIRED CONFIG)
file(GLOB_RECURSE SRC ${PROJECT_SOURCE_DIR}/src/*.cpp)
add_executable(POCompiler ${SRC})
target_compile_features(POCompiler PRIVATE cxx_std_20)
target_include_directories(POCompiler PRIVATE ${CMAKE_SOURCE_DIR}/external)
target_link_libraries(POCompiler PRIVATE benchmark::benchmark benchmark::benchmark_main)
target_compile_options(POCompiler PRIVATE -fno-omit-frame-pointer)